[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dual-sdk"
version = "0.1.0"
description = "Official Python SDK for the DUAL tokenization platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "DUAL", email = "dev@blockv-labs.io" }]
keywords = ["dual", "tokenization", "blockchain", "web3", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://dual-docs-gray.vercel.app"
Documentation = "https://dual-docs-gray.vercel.app/docs/developer-kit/python-sdk"
Repository = "https://github.com/ro-ro-b/dual-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/dual_sdk"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["dual_sdk"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
